tests/algorithms/x/Pascal/other/alternative_list_arrange.error
compile: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /workspace/mochi/tests/algorithms/x/Pascal/other/alternative_list_arrange.pas
alternative_list_arrange.pas(86,10) Warning: Function result does not seem to be set
alternative_list_arrange.pas(91,8) Error: Identifier not found "makeInt"
alternative_list_arrange.pas(95,8) Error: Identifier not found "makeStr"
alternative_list_arrange.pas(99,24) Error: Identifier not found "v"
alternative_list_arrange.pas(99,37) Error: Identifier not found "v"
alternative_list_arrange.pas(166) Fatal: There were 4 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
